--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3881,4 +3881,7 @@
   <data name="Unchanged" xml:space="preserve">
     <value>Unchanged</value>
   </data>
+  <data name="Finished_word" xml:space="preserve">
+    <value>Finished</value>
+  </data>
 </root>
